test/classes/nilability/coerce-away-nilable.good
coerce-away-nilable.chpl:6: error: Cannot default-initialize notNilable: borrowed MyClass
note: non-nil class types do not support default initialization
note: Consider using the type borrowed MyClass? instead
coerce-away-nilable.chpl:6: error: Cannot assign to non-nilable class type borrowed MyClass from nilable class type borrowed MyClass?
